--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,44 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.10.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.10.RELEASE'
+    }
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+    }
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'groovy'
+apply plugin: 'com.github.ben-manes.versions'
 
 group = 'no.rogfk'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    jcenter()
 
-	repositories {
-		maven {
-			url  "http://dl.bintray.com/fint/maven"
-		}
-	}
-
+    repositories {
+        maven {
+            url "http://dl.bintray.com/fint/maven"
+        }
+    }
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.ldap:spring-ldap-core:2.2.1.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.ldap:spring-ldap-core:2.3.2.RELEASE')
 
     compileOnly('org.projectlombok:lombok')
 
-	testCompile('no.fint:fint-test-utils:0.0.4')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile("org.spockframework:spock-spring:1.1-groovy-2.4")
-	testCompile("org.spockframework:spock-core:1.1-groovy-2.4")
-    testCompile("cglib:cglib-nodep:3.2.5")
-
+    testCompile('no.fint:fint-test-utils:0.0.4')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.spockframework:spock-spring:1.1-groovy-2.4")
+    testCompile("org.spockframework:spock-core:1.1-groovy-2.4")
+    testCompile("cglib:cglib-nodep:3.2.6")
 }
